# RenderLib

./: CMakeLists.txt  main.cpp
app/: main.cpp
examples/: CMakeLists.txt
examples/example_app/src/: main.cpp
renderlib/: CMakeLists.txt
renderlib/include/: gl.h  gl_shader.h  mesh.h  renderlib.h
renderlib/src/: gl_shader.cpp  mesh.cpp  renderlib.cpp
renderlib_tests/: CMakeLists.txt
renderlib_tests/test_files/: cube.gltf
ressources/shaders/: default.frag
src/: app.cpp  app.h  core.h  lib.cpp  loader.cpp  loader.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
src/renderer/: gl.h
